--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 8000
 
-URI = 'mongodb://127.0.0.1:27017/LibrarySystem'
+URI = 'mongodb+srv://Karmbhumi_Abhyasika:ShrikantU%40123@cluster0.a0x3f.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
